<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_margin="8dp"
    app:cardCornerRadius="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/tarjeta"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="167dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/nombre"
                android:layout_gravity="left"
                android:textColor="@color/black"
                android:textSize="@dimen/textoTarjeta"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textSize="@dimen/respuestaTarjeta"/>

            <TextView
                android:id="@+id/relationshipLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="left"
                android:layout_marginBottom="8dp"
                android:text="@string/tipoRelacion"
                android:textColor="@color/black"
                android:textSize="@dimen/textoTarjeta"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/relationship"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textSize="@dimen/respuestaTarjeta" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="167dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="left"
            android:orientation="vertical">

            <TextView
                android:id="@+id/surnameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_gravity="left"
                android:text="@string/apellidos"
                android:textColor="@color/black"
                android:textSize="@dimen/textoTarjeta"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textSize="@dimen/respuestaTarjeta" />

            <TextView
                android:id="@+id/phoneNumberLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/telefono"
                android:layout_gravity="left"
                android:textColor="@color/black"
                android:textSize="@dimen/textoTarjeta"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textSize="@dimen/respuestaTarjeta" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>